--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/moment": "^1.6.0",
+    "cookie-universal-nuxt": "^2.1.3",
     "nuxt": "^2.12.0",
     "nuxt-i18n": "^6.6.1",
     "vee-validate": "^3.2.5"
