--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/moment": "^1.6.0",
+    "chart.js": "^2.9.3",
     "cookie-universal-nuxt": "^2.1.3",
     "nuxt": "^2.12.0",
     "nuxt-i18n": "^6.6.1",
-    "vee-validate": "^3.2.5"
+    "nuxt-webfontloader": "^1.1.0",
+    "vee-validate": "^3.2.5",
+    "vue-chartjs": "^3.5.0",
+    "vue-json-excel": "^0.2.98",
+    "vue-snotify": "^3.2.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
