--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nuxtjs/moment": "^1.6.0",
     "chart.js": "^2.9.3",
     "cookie-universal-nuxt": "^2.1.3",
+    "lodash.groupby": "^4.6.0",
+    "lodash.isequal": "^4.5.0",
     "nuxt": "^2.12.0",
     "nuxt-i18n": "^6.6.1",
     "nuxt-webfontloader": "^1.1.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/vuetify": "^1.11.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
