--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vee-validate": "^3.2.5",
     "vue-chartjs": "^3.5.0",
     "vue-json-excel": "^0.2.98",
-    "vue-snotify": "^3.2.1"
+    "vue-snotify": "^3.2.1",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
