--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/moment": "^1.6.0",
     "chart.js": "^2.9.3",
     "cookie-universal-nuxt": "^2.1.3",
+    "d3-scale-chromatic": "^1.5.0",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
     "nuxt": "^2.12.2",
