--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/moment": "^1.6.0",
     "chart.js": "^2.9.3",
     "chartjs-chart-geo": "^1.1.4",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "cookie-universal-nuxt": "^2.1.3",
     "d3-scale-chromatic": "^1.5.0",
     "lodash.groupby": "^4.6.0",
