--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "world-atlas": "^2.0.2"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.0.0",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/google-analytics": "^2.2.3",
@@ -44,6 +45,9 @@
     "babel-jest": "^25.3.0",
     "eslint": "^6.8.0",
     "eslint-plugin-nuxt": "^0.5.2",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.1.0",
     "jest": "^25.3.0",
     "vue-jest": "^4.0.0-0"
   }
