--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "generate-test": "cross-env NODE_ENV=development nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest"
   },
@@ -43,6 +44,7 @@
     "@vue/test-utils": "^1.0.0-beta.33",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^25.4.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-plugin-nuxt": "^0.5.2",
     "imagemin-mozjpeg": "^8.0.0",
